--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-requirements.txt
-openai==0.2.6
-pyyaml==5.3.1
+pyttsx3==2.71
+speech_recognition==3.8.1
+sqlite3==2.6.0
+openai==0.2.2
+yaml==5.3.1
+tensorflow==2.3.0
