--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pyttsx3==2.71
-speech_recognition==3.8.1
-sqlite3==2.6.0
-openai==0.2.2
-yaml==5.3.1
-tensorflow==2.3.0
+numpy==1.21.5
+PyAudio==0.2.11
+python-dotenv==0.19.1
+PyYAML==6.0
+gTTS==2.2.3
+pocketsphinx==0.1.15
+speechrecognition==3.8.1
